# httpfilegen

./: AGENTS.md  CLAUDE.md  README.md  ROADMAP.md  flake.nix  main.py  pyproject.toml
.forgejo/workflows/: ci.yml
.github/workflows/: test.yml
samples/: callback-example.json  no-oauth-scopes.json
samples/httpbin/: httpbin.json
samples/webhook-example/: webhook-example.json
src/: cli.py  http-client.env.json  http-client.private.env.json  main.py  openapi.http
src/http_file_generator/: http_file_generator.py
src/http_file_generator/models/: __init__.py  enums.py
src/http_file_generator/models/env_file/: __init__.py  env_files.py  generator.py
src/http_file_generator/models/http_file/: __init__.py  http_file_data.py  open_api_parser.py  request.py  scripts.py  var.py
src/http_file_generator/models/settings/: settings.py
src/http_file_generator/models/utils/: auth_parsing.py  body_parsing.py  parameter_parsing.py
src/modules/: __init__.py
src/modules/http_file_generator/: __init__.py  generator.py  http_file_generator.py
src/modules/http_file_generator/modules/: __init__.py  http_file_data.py  httpfile.py  request.py  scripts.py  settings.py  var.py
src/modules/openapi_parser/: __init__.py  open_api_parser.py  parser.py
tests/: conftest.py  test_auth_parsing.py  test_auth_variants.py  test_base_url_rendering.py  test_body_parsing_examples.py  test_body_parsing_more.py  test_body_parsing_precedence.py  test_cli_batch.py  test_cli_batch_include_schema.py  test_cli_dry_run_validate.py  test_cli_error_paths.py  test_cli_errors.py  test_cli_filemode_baseurl.py  test_cli_generate.py  test_cli_include_examples.py  test_cli_include_schema.py  test_cli_info_paths.py  test_cli_more_cases.py  test_cli_sample.py  test_cli_sample_filters.py  test_editor_mode.py  test_env_files_models.py  test_env_files_more.py  test_env_files_validation.py  test_env_generator_oauth.py  test_error_handling.py  test_examples_rendering_structure.py  test_generator_envs.py  test_openapi_parser_extras.py  test_openapi_parser_get_sample.py  test_openapi_parser_samples_more.py  test_openapi_parser_unit.py  test_parameter_parsing.py  test_parameter_parsing_examples_object.py  test_parameter_parsing_more.py  test_parser_edge_cases.py  test_request_scripts.py  test_var.py
