[project]
name = "httpfilegen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jsf>=0.11.2",
    "openapi-pydantic>=0.5.1",
    "openapi-spec-validator>=0.7.2",
    "prance>=25.4.8.0",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.11.0",
    "typer>=0.20.0",
]

[project.scripts]
httpfilegen = "cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["cli"]

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests", "tests.*", "*.tests", "*.tests.*"]
